--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
 </head>
 <body>
 
-    
+<div id="left-side">
+
+</div>
+
+<div id="right-side">
+
+    <div id="top-text" class="left-right"> This is not a real online service! You know you need something like
+        this in your life to help you realize your deepest dreams. <br> Sign up <span style="font-style: italic;">now</span>
+        to get started.
+        <br> <br>
+        You <span style="font-style: italic;">know</span> you want to.
+    </div>
+
+    <div id="form" class="left-right">
+
+        <div id="form-header">Let's do this!</div>
+
+
+        <div> 
+
+
+        </div>
+
+    </div>
+
+    <div></div>
+
+</div>
+
 </body>
 </html>
