--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src=""></script>
     <title>Sign-up</title>
 </head>
 <body>
@@ -27,8 +28,41 @@
         <div id="form-header">Let's do this!</div>
 
 
-        <div> 
+        <div id="form"> 
+            <form action="" method="post">
 
+                <div>
+                <label for="firstName"> FIRST NAME</label> <br>
+                <input type="text" id="firstName">
+                </div>
+
+                <div>
+                <label for="lastName">LAST NAME</label> <br>
+                <input type="text" id="lastName">
+                <br>
+                </div>
+
+                <div>
+                <label for="email">EMAIL</label> <br>
+                <input type="text" id="email">
+                </div>
+
+                <div>
+                <label for="phoneNumber">PHONE NUMBER</label> <br>
+                <input type="text" id="phoneNumber">
+                <br>
+                </div>
+                
+                <div>
+                <label for="password">PASSWORD</label> <br>
+                <input type="text" id="password" type="password">
+                </div>
+                
+                <div>
+                <label for="confirmPassword">CONFIRM PASSWORD</label> <br>
+                <input type="text" id="confirmPassword" type="password">
+                </div>
+              </form>
 
         </div>
 
