Add sign up text on top of the image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div id="left-side">
-
+    <div class="black-box"> <span style="color: white;"> Sign Up!</span></div>
 </div>
 
 <div id="right-side">
@@ -68,7 +68,12 @@
 
     </div>
 
-    <div></div>
+    <div id="footer" class="left-right">
+        <button type="button"> Create Account</button> <br> <br>
+        <div> Already have an account? Log in.</div>
+
+    </div>
+
 
 </div>
 
